--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,7 @@ html
         meta(name="description", content="The beginnings of a great, typesafe application")
         title Elm fullstack starter
         script(type="text/javascript" src="Main.js")
-        link(rel="stylesheet" href="styles.css")
+        link(rel="stylesheet" href="css/main.css")
 
     body
         script.
